Fix issues in Part 4
- Readme code using incorrect properties and API methods.
- XAML end tag in MainPage.xaml was incorrect.
- Shorter LINQ Query using MinBy

--- a/Part 4 - Platform Features/MonkeyFinder/View/MainPage.xaml
+++ b/Part 4 - Platform Features/MonkeyFinder/View/MainPage.xaml
@@ -34,7 +34,7 @@
                                     Padding="10">
                                     <Label Style="{StaticResource LargeLabel}" Text="{Binding Name}" />
                                     <Label Style="{StaticResource MediumLabel}" Text="{Binding Location}" />
-                                </StackLayout>
+                                </VerticalStackLayout>
                             </Grid>
                         </Frame>
                     </Grid>
@@ -47,6 +47,14 @@
                 IsEnabled="{Binding IsNotBusy}"
                 Grid.Row="1"
                 Grid.Column="0"
+                Style="{StaticResource ButtonOutline}"
+                Margin="8"/>
+        
+        <Button Text="Find Closest" 
+                Command="{Binding GetClosestMonkeyCommand}"
+                IsEnabled="{Binding IsNotBusy}"
+                Grid.Row="1"
+                Grid.Column="1"
                 Style="{StaticResource ButtonOutline}"
                 Margin="8"/>
 
