--- a/Part 6 - AppThemes/MonkeyFinder/View/MainPage.xaml
+++ b/Part 6 - AppThemes/MonkeyFinder/View/MainPage.xaml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="MonkeyFinder.View.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:model="clr-namespace:MonkeyFinder.Model"
-    xmlns:viewmodel="clr-namespace:MonkeyFinder.ViewModel"
+    xmlns:viewmodel="clr-namespace:Adventures.ViewModel;assembly=Adventures.Common"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+    xmlns:model="clr-namespace:Adventures.Common.Model;assembly=Adventures.Common"
     ios:Page.UseSafeArea="True"
-    Title="Monkeys"
-    x:DataType="viewmodel:MonkeysViewModel">
+    Title="{Binding Title}"
+    x:DataType="viewmodel:ListViewModel">
     <Grid
         ColumnDefinitions="*,*"
         ColumnSpacing="5"
@@ -16,29 +16,26 @@
         RowSpacing="0">
         <RefreshView
             Grid.ColumnSpan="2"
-            Command="{Binding GetMonkeysCommand}"
+            Command="{Binding ButtonClickHandlerCommand}"
             IsRefreshing="{Binding IsRefreshing}">
             <CollectionView
-                ItemsSource="{Binding Monkeys}"
+                ItemsSource="{Binding ListItems}"
                 SelectionMode="None">
-                <!--<CollectionView.EmptyView>
+                <CollectionView.EmptyView>
                     <StackLayout Padding="100">
-                        <Image
-                            HorizontalOptions="CenterAndExpand"
-                            Source="nodata.png"
-                            VerticalOptions="CenterAndExpand" />
+                        <Image Source="nodata.png" />
                     </StackLayout>
                 </CollectionView.EmptyView>
-                <CollectionView.ItemsLayout>
+                <!--<CollectionView.ItemsLayout>
                     <GridItemsLayout  Orientation="Horizontal" Span="3"/>
                 </CollectionView.ItemsLayout>-->
                 <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:Monkey">
+                    <DataTemplate x:DataType="model:ListItem">
                         <Grid Padding="10">
                             <Frame HeightRequest="125" Style="{StaticResource CardView}">
                                 <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer 
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}"
+                                    <TapGestureRecognizer
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ListViewModel}}, Path=ButtonClickHandlerCommand}"
                                         CommandParameter="{Binding .}"/>
                                 </Frame.GestureRecognizers>
                                 <Grid Padding="0" ColumnDefinitions="125,*">
@@ -61,25 +58,28 @@
             </CollectionView>
         </RefreshView>
 
-        <Button
+        <HorizontalStackLayout
             Grid.Row="1"
-            Grid.Column="0"
-            Margin="8"
-            Command="{Binding GetMonkeysCommand}"
-            IsEnabled="{Binding IsNotBusy}"
-            Style="{StaticResource ButtonOutline}"
-            Text="Get Monkeys" />
+            Grid.ColumnSpan="2"
+            Margin="8">
+            <Label
+                Margin="8"
+                Padding="5"
+                Background="red"
+                Style="{StaticResource SmallLabel}"
+                Text="{Binding Mode, Mode=TwoWay}" />
 
-        <!--  Add this  -->
-        <Button
-            Grid.Row="1"
-            Grid.Column="1"
-            Margin="8"
-            Command="{Binding GetClosestMonkeyCommand}"
-            IsEnabled="{Binding IsNotBusy}"
-            Style="{StaticResource ButtonOutline}"
-            Text="Find Closest" />
+            <Button
+                IsEnabled="{Binding IsNotBusy}"
+                Style="{StaticResource ButtonOutline}"
+                Text="{Binding GetDataButtonText}" />
 
+            <Button
+                Margin="8"
+                IsEnabled="{Binding IsNotBusy}"
+                Style="{StaticResource ButtonOutline}"
+                Text="Find Closest" />
+        </HorizontalStackLayout>
 
         <ActivityIndicator
             Grid.RowSpan="2"
