Restored part 6 to original state

--- a/Part 6 - AppThemes/MonkeyFinder/App.xaml
+++ b/Part 6 - AppThemes/MonkeyFinder/App.xaml
@@ -6,13 +6,8 @@
     xmlns:local="clr-namespace:MonkeyFinder">
     <Application.Resources>
         <ResourceDictionary>
-            <Style TargetType="Button">
-                <Setter Property="Command" Value="{Binding ButtonClickHandlerCommand}"/>
-                <Setter Property="CommandParameter" Value="{Binding Source={RelativeSource Self}}"/>
-            </Style>
-
-            <Color x:Key="Primary">brown</Color>
-            <Color x:Key="PrimaryDark">black</Color>
+            <Color x:Key="Primary">#FFC107</Color>
+            <Color x:Key="PrimaryDark">#FFA000</Color>
             <Color x:Key="Accent">#00BCD4</Color>
 
             <Color x:Key="LightBackground">#FAF9F8</Color>
