--- a/Part 6 - AppThemes/MonkeyFinder/View/MainPage.xaml
+++ b/Part 6 - AppThemes/MonkeyFinder/View/MainPage.xaml
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
     x:Class="MonkeyFinder.View.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:viewmodel="clr-namespace:Adventures.ViewModel;assembly=Adventures.Common"
+    xmlns:model="clr-namespace:MonkeyFinder.Model"
+    xmlns:viewmodel="clr-namespace:MonkeyFinder.ViewModel"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-    xmlns:model="clr-namespace:Adventures.Common.Model;assembly=Adventures.Common"
     ios:Page.UseSafeArea="True"
-    Title="{Binding Title}"
-    x:DataType="viewmodel:ListViewModel">
+    Title="Monkeys"
+    x:DataType="viewmodel:MonkeysViewModel">
     <Grid
         ColumnDefinitions="*,*"
         ColumnSpacing="5"
@@ -16,26 +16,29 @@
         RowSpacing="0">
         <RefreshView
             Grid.ColumnSpan="2"
-            Command="{Binding ButtonClickHandlerCommand}"
+            Command="{Binding GetMonkeysCommand}"
             IsRefreshing="{Binding IsRefreshing}">
             <CollectionView
-                ItemsSource="{Binding ListItems}"
+                ItemsSource="{Binding Monkeys}"
                 SelectionMode="None">
-                <CollectionView.EmptyView>
+                <!--<CollectionView.EmptyView>
                     <StackLayout Padding="100">
-                        <Image Source="nodata.png" />
+                        <Image
+                            HorizontalOptions="CenterAndExpand"
+                            Source="nodata.png"
+                            VerticalOptions="CenterAndExpand" />
                     </StackLayout>
                 </CollectionView.EmptyView>
-                <!--<CollectionView.ItemsLayout>
+                <CollectionView.ItemsLayout>
                     <GridItemsLayout  Orientation="Horizontal" Span="3"/>
                 </CollectionView.ItemsLayout>-->
                 <CollectionView.ItemTemplate>
-                    <DataTemplate x:DataType="model:ListItem">
+                    <DataTemplate x:DataType="model:Monkey">
                         <Grid Padding="10">
                             <Frame HeightRequest="125" Style="{StaticResource CardView}">
                                 <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ListViewModel}}, Path=ButtonClickHandlerCommand}"
+                                    <TapGestureRecognizer 
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}"
                                         CommandParameter="{Binding .}"/>
                                 </Frame.GestureRecognizers>
                                 <Grid Padding="0" ColumnDefinitions="125,*">
@@ -58,28 +61,25 @@
             </CollectionView>
         </RefreshView>
 
-        <HorizontalStackLayout
+        <Button
             Grid.Row="1"
-            Grid.ColumnSpan="2"
-            Margin="8">
-            <Label
-                Margin="8"
-                Padding="5"
-                Background="red"
-                Style="{StaticResource SmallLabel}"
-                Text="{Binding Mode, Mode=TwoWay}" />
+            Grid.Column="0"
+            Margin="8"
+            Command="{Binding GetMonkeysCommand}"
+            IsEnabled="{Binding IsNotBusy}"
+            Style="{StaticResource ButtonOutline}"
+            Text="Get Monkeys" />
 
-            <Button
-                IsEnabled="{Binding IsNotBusy}"
-                Style="{StaticResource ButtonOutline}"
-                Text="{Binding GetDataButtonText}" />
+        <!--  Add this  -->
+        <Button
+            Grid.Row="1"
+            Grid.Column="1"
+            Margin="8"
+            Command="{Binding GetClosestMonkeyCommand}"
+            IsEnabled="{Binding IsNotBusy}"
+            Style="{StaticResource ButtonOutline}"
+            Text="Find Closest" />
 
-            <Button
-                Margin="8"
-                IsEnabled="{Binding IsNotBusy}"
-                Style="{StaticResource ButtonOutline}"
-                Text="Find Closest" />
-        </HorizontalStackLayout>
 
         <ActivityIndicator
             Grid.RowSpan="2"
