--- a/Part 7 - MVPVM/MonkeyFinder/View/InventoryPage.xaml
+++ b/Part 7 - MVPVM/MonkeyFinder/View/InventoryPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage
-    x:Class="MonkeyFinder.View.MainPage"
+    x:Class="MonkeyFinder.View.InventoryPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewmodel="clr-namespace:Adventures.ViewModel;assembly=Adventures.Common"
@@ -72,19 +72,8 @@
             <Button
                 IsEnabled="{Binding IsNotBusy}"
                 Style="{StaticResource ButtonOutline}"
-                Text="{Binding GetDataButtonText}" />
+                Text="{Binding GetInventoryButtonText}" />
 
-             <Button
-                Margin="8"
-                IsEnabled="{Binding IsNotBusy}"
-                Style="{StaticResource ButtonOutline}"
-                Text="Inventory" />
-
-            <Button
-                Margin="8"
-                IsEnabled="{Binding IsNotBusy}"
-                Style="{StaticResource ButtonOutline}"
-                Text="Find Closest" />
         </HorizontalStackLayout>
 
         <ActivityIndicator
