--- a/Part 7 - MVPVM/MonkeyFinder/View/MainPage.xaml
+++ b/Part 7 - MVPVM/MonkeyFinder/View/MainPage.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage
+<controls:ContentPageBase
+ xmlns:controls="clr-namespace:Adventures.Common.Controls;assembly=Adventures.Common"
     x:Class="MonkeyFinder.View.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
@@ -95,4 +96,4 @@
             IsVisible="{Binding IsBusy}"
             VerticalOptions="CenterAndExpand" />
     </Grid>
-</ContentPage>
+</controls:ContentPageBase>
