Further cleanup - separation of concerns

--- a/Part 7 - MVPVM/Adventures.Inventory/Views/InventoryPage.xaml
+++ b/Part 7 - MVPVM/Adventures.Inventory/Views/InventoryPage.xaml
@@ -4,7 +4,7 @@
  x:Class="Adventures.Inventory.Views.InventoryPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:viewmodel="clr-namespace:Adventures.ViewModel;assembly=Adventures.Common"
+    xmlns:viewmodel="clr-namespace:Adventures.Common.ViewModel;assembly=Adventures.Common"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:model="clr-namespace:Adventures.Common.Model;assembly=Adventures.Common"
     ios:Page.UseSafeArea="True"
