--- a/Part 7 - MVPVM/Adventures.Common/Views/DetailsPage.xaml
+++ b/Part 7 - MVPVM/Adventures.Common/Views/DetailsPage.xaml
@@ -4,7 +4,7 @@
     x:Class="Adventures.Common.Views.DetailsPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:viewmodel="clr-namespace:Adventures.ViewModel;assembly=Adventures.Common"
+    xmlns:viewmodel="clr-namespace:Adventures.Common.ViewModel;assembly=Adventures.Common"
     Title="{Binding ListItem.Name}"
     x:DataType="viewmodel:DetailsViewModel">
     <ScrollView>
