--- a/Part 7 - MVPVM/MonkeyFinder/View/MainPage.xaml
+++ b/Part 7 - MVPVM/MonkeyFinder/View/MainPage.xaml
@@ -4,17 +4,17 @@
     x:Class="MonkeyFinder.View.MainPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:commands="clr-namespace:Adventures.Common.Commands;assembly=Adventures.Common"
     xmlns:viewmodel="clr-namespace:Adventures.Common.ViewModel;assembly=Adventures.Common"
     xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
     xmlns:model="clr-namespace:Adventures.Common.Model;assembly=Adventures.Common"
     ios:Page.UseSafeArea="True"
     Title="{Binding Title}"
     x:DataType="viewmodel:ListViewModel">
+
     <Grid
         ColumnDefinitions="*,*"
         ColumnSpacing="5"
-        RowDefinitions="*,Auto"
+        RowDefinitions="*,55"
         RowSpacing="0">
         <RefreshView
             Grid.ColumnSpan="2"
@@ -27,9 +27,6 @@
                         <Image Source="nodata.png" />
                     </StackLayout>
                 </CollectionView.EmptyView>
-                <!--CollectionView.ItemsLayout>
-                    <GridItemsLayout  Orientation="Horizontal" Span="3"/>
-                </CollectionView.ItemsLayout-->
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:ListItem">
                         <Grid Padding="10">
@@ -59,13 +56,14 @@
             </CollectionView>
         </RefreshView>
 
-         <HorizontalStackLayout
+        <HorizontalStackLayout
             Grid.Row="1"
-            Grid.ColumnSpan="2"
-            Margin="8">
+            Grid.ColumnSpan="2">
+
+            <!-- Label for OFFLINE / ONLINE based on WIFI connection -->
             <Label
-                Margin="10"
-                Padding="10"
+                Margin="6"
+                Padding="6"
                 Background="red"
                 Style="{StaticResource SmallLabel}"
                 Text="{Binding Mode, Mode=TwoWay}" >
@@ -75,14 +73,11 @@
                 </Label.GestureRecognizers>
             </Label>
 
-            <FlexLayout
-                x:Name="flexLayout"
-                Margin="5,10"
-            />
+            <!-- Layout buttons based on registered IMvpCommands -->
+            <FlexLayout x:Name="flexLayout" Margin="5,0"/>
 
         </HorizontalStackLayout>
-
-        <ActivityIndicator
+        <ActivityIndicator 
             HorizontalOptions="FillAndExpand"
             IsRunning="{Binding IsBusy}"
             IsVisible="{Binding IsBusy}"
