Cleaned up code
Clean up

--- a/Part 7 - MVPVM/Adventures.Inventory/Views/InventoryPage.xaml
+++ b/Part 7 - MVPVM/Adventures.Inventory/Views/InventoryPage.xaml
@@ -70,10 +70,8 @@
                     Converter={StaticResource modeConverter},
                     Mode=TwoWay}"/>
 
-            <Button
-                IsEnabled="{Binding IsNotBusy}"
-                Style="{StaticResource ButtonOutline}"
-                Text="{Binding ButtonText2}" />
+            <!-- Layout buttons based on registered IMvpCommands -->
+            <FlexLayout x:Name="flexLayout" Margin="5,0"/>
 
         </HorizontalStackLayout>
 
