--- a/Part 7 - MVPVM/Adventures.Inventory/Views/InventoryPage.xaml
+++ b/Part 7 - MVPVM/Adventures.Inventory/Views/InventoryPage.xaml
@@ -11,26 +11,18 @@
     Title="{Binding Title}"
     x:DataType="viewmodel:ListViewModel">
     <Grid
-        ColumnDefinitions="*,*"
+        ColumnDefinitions="*,*,20"
         ColumnSpacing="5"
         RowDefinitions="*,Auto"
         RowSpacing="0">
         <RefreshView
-            Grid.ColumnSpan="2"
+            Grid.ColumnSpan="3"
             Command="{Binding ButtonClickHandlerCommand}"
             IsRefreshing="{Binding IsRefreshing}">
             <CollectionView
                 ItemsSource="{Binding ListItems}"
                 SelectionMode="None">
-                <!--<CollectionView.EmptyView>
-                    <StackLayout>
-                        <Image Source="nodata.png" />
-                    </StackLayout>
-                </CollectionView.EmptyView>
-                <CollectionView.ItemsLayout>
-                    <GridItemsLayout  Orientation="Horizontal" Span="3"/>
-                </CollectionView.ItemsLayout>-->
-                <CollectionView.ItemTemplate>
+                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:ListItem">
                         <Grid Padding="10">
                             <Frame HeightRequest="125" Style="{StaticResource CardView}">
@@ -60,20 +52,38 @@
         </RefreshView>
 
         <HorizontalStackLayout
+            Margin="0"
             Grid.Row="1"
-            Grid.ColumnSpan="2"
-            Margin="8">
+            Grid.ColumnSpan="3">
 
-            <Switch
-                Margin="5"
-                IsToggled="{Binding Mode,
-                    Converter={StaticResource modeConverter},
-                    Mode=TwoWay}"/>
+            <Label x:Name="modeLabel"
+                Margin="6"
+                Padding="6"
+                Background="lightGray"
+                Style="{StaticResource SmallLabel}"
+                Text="CLICK ME!" >
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"
+                                          NumberOfTapsRequired="1"/>
+                </Label.GestureRecognizers>
+            </Label>
 
             <!-- Layout buttons based on registered IMvpCommands -->
             <FlexLayout x:Name="flexLayout" Margin="5,0"/>
 
+            <Button Text="?"
+                    Margin="0,-10,0,0"
+                    Style="{StaticResource ButtonOutline}"/>
+
         </HorizontalStackLayout>
+
+        <Switch
+            Margin="-40,10,0,0"
+            Grid.Row="1"
+            Grid.Column="3"
+            IsToggled="{Binding Mode,
+                Converter={StaticResource modeConverter},
+                Mode=TwoWay}"/>
 
         <ActivityIndicator
             Grid.RowSpan="2"
