--- a/Part 7 - MVPVM/MonkeyFinder/App.xaml
+++ b/Part 7 - MVPVM/MonkeyFinder/App.xaml
@@ -9,11 +9,6 @@
     <Application.Resources>
         <ResourceDictionary>
             <converters:ModeConverter x:Key="modeConverter"/>
-            <Style TargetType="Button">
-                <Setter Property="Command" Value="{Binding ButtonClickHandlerCommand}"/>
-                <Setter Property="CommandParameter" Value="{Binding Source={RelativeSource Self}}"/>
-            </Style>
-
             <Color x:Key="Primary">brown</Color>
             <Color x:Key="PrimaryDark">black</Color>
             <Color x:Key="Accent">#00BCD4</Color>
@@ -22,33 +17,44 @@
             <Color x:Key="DarkBackground">Black</Color>
 
             <Style ApplyToDerivedTypes="True" TargetType="Page">
-                <Setter Property="BackgroundColor" Value="{StaticResource LightBackground}" />
+                <Setter Property="BackgroundColor"
+                        Value="{StaticResource LightBackground}" />
             </Style>
 
-			<Style ApplyToDerivedTypes="True" TargetType="NavigationPage">
-				<Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
-				<Setter Property="BarBackgroundColor" Value="{StaticResource Primary}" />
-				<Setter Property="BarTextColor" Value="White" />
+			<Style ApplyToDerivedTypes="True"
+                   TargetType="NavigationPage">
+				<Setter Property="BackgroundColor"
+                        Value="{AppThemeBinding Light={StaticResource LightBackground}, Dark={StaticResource DarkBackground}}" />
+				<Setter Property="BarBackgroundColor"
+                        Value="{StaticResource Primary}" />
+				<Setter Property="BarTextColor"
+                        Value="White" />
 			</Style>
 
             <Style TargetType="Label" x:Key="BaseLabel">
-                <Setter Property="FontFamily" Value="OpenSansRegular" />
-                <Setter Property="TextColor" Value="#1F1F1F" />
+                <Setter Property="FontFamily"
+                        Value="OpenSansRegular" />
+                <Setter Property="TextColor"
+                        Value="#1F1F1F" />
             </Style>
 
-            <Style x:Key="MicroLabel" BasedOn="{StaticResource BaseLabel}" TargetType="Label">
+            <Style x:Key="MicroLabel" BasedOn="{StaticResource BaseLabel}"
+                   TargetType="Label">
                 <Setter Property="FontSize" Value="10"/>
             </Style>
 
-            <Style x:Key="SmallLabel" BasedOn="{StaticResource BaseLabel}" TargetType="Label">
+            <Style x:Key="SmallLabel" BasedOn="{StaticResource BaseLabel}"
+                   TargetType="Label">
                 <Setter Property="FontSize" Value="12"/>
             </Style>
 
-            <Style x:Key="MediumLabel" BasedOn="{StaticResource BaseLabel}" TargetType="Label">
+            <Style x:Key="MediumLabel" BasedOn="{StaticResource BaseLabel}"
+                   TargetType="Label">
                 <Setter Property="FontSize" Value="16"/>
             </Style>
 
-            <Style x:Key="LargeLabel" BasedOn="{StaticResource BaseLabel}" TargetType="Label">
+            <Style x:Key="LargeLabel" BasedOn="{StaticResource BaseLabel}"
+                   TargetType="Label">
                 <Setter Property="FontSize" Value="20"/>
             </Style>
 
@@ -56,21 +62,40 @@
                 <Setter Property="RefreshColor" Value="{StaticResource Primary}" />
             </Style>
 
+            <Style TargetType="Button">
+                <Setter Property="Command"
+                        Value="{Binding ButtonClickHandlerCommand}"/>
+                <Setter Property="CommandParameter"
+                        Value="{Binding Source={RelativeSource Self}}"/>
+            </Style>
+
             <Style x:Key="ButtonOutline" TargetType="Button">
-                <Setter Property="Background" Value="{StaticResource LightBackground}" />
-                <Setter Property="TextColor" Value="{StaticResource Primary}" />
-                <Setter Property="BorderColor" Value="{StaticResource Primary}" />
-                <Setter Property="BorderWidth" Value="2" />
-                <Setter Property="HeightRequest" Value="40" />
-                <Setter Property="CornerRadius" Value="20" />
+                <Setter Property="Background"
+                        Value="{StaticResource LightBackground}" />
+                <Setter Property="TextColor"
+                        Value="{StaticResource Primary}" />
+                <Setter Property="BorderColor"
+                        Value="{StaticResource Primary}" />
+                <Setter Property="BorderWidth"
+                        Value="2" />
+                <Setter Property="HeightRequest"
+                        Value="40" />
+                <Setter Property="CornerRadius"
+                        Value="20" />
             </Style>
             <Style x:Key="CardView" TargetType="Frame">
-                <Setter Property="BorderColor" Value="#DDDDDD" />
-                <Setter Property="HasShadow" Value="True" />
-                <Setter Property="Padding" Value="0" />
-                <Setter Property="Background" Value="{StaticResource LightBackground}" />
-                <Setter Property="CornerRadius" Value="10" />
-                <Setter Property="IsClippedToBounds" Value="True"/>
+                <Setter Property="BorderColor"
+                        Value="#DDDDDD" />
+                <Setter Property="HasShadow"
+                        Value="True" />
+                <Setter Property="Padding"
+                        Value="0" />
+                <Setter Property="Background"
+                        Value="{StaticResource LightBackground}" />
+                <Setter Property="CornerRadius"
+                        Value="10" />
+                <Setter Property="IsClippedToBounds"
+                        Value="True"/>
             </Style>
         </ResourceDictionary>
     </Application.Resources>
