--- a/Part 7 - MVPVM/MonkeyFinder/View/MainPage.xaml
+++ b/Part 7 - MVPVM/MonkeyFinder/View/MainPage.xaml
@@ -23,17 +23,22 @@
                 ItemsSource="{Binding ListItems}"
                 SelectionMode="None">
                 <CollectionView.EmptyView>
-                    <StackLayout Padding="100">
-                        <Image Source="nodata.png" />
+                    <StackLayout>
+                         <Image Source="nodata.png" />
                     </StackLayout>
                 </CollectionView.EmptyView>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:ListItem">
                         <Grid Padding="10">
-                            <Frame HeightRequest="125" Style="{StaticResource CardView}">
+                            <Frame HeightRequest="125"
+                                   Style="{StaticResource CardView}">
                                 <Frame.GestureRecognizers>
                                     <TapGestureRecognizer
-                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:ListViewModel}}, Path=ButtonClickHandlerCommand}"
+                                        Command="{Binding
+                                            Source={RelativeSource
+                                                AncestorType={x:Type
+                                                    viewmodel:ListViewModel}},
+                                            Path=ButtonClickHandlerCommand}"
                                         CommandParameter="{Binding .}"/>
                                 </Frame.GestureRecognizers>
                                 <Grid Padding="0" ColumnDefinitions="125,*">
@@ -45,8 +50,10 @@
                                     <VerticalStackLayout
                                         Grid.Column="1"
                                         Padding="10">
-                                        <Label Style="{StaticResource LargeLabel}" Text="{Binding Name}" />
-                                        <Label Style="{StaticResource MediumLabel}" Text="{Binding Location}" />
+                                        <Label Style="{StaticResource LargeLabel}"
+                                               Text="{Binding Name}" />
+                                        <Label Style="{StaticResource MediumLabel}"
+                                               Text="{Binding Location}" />
                                     </VerticalStackLayout>
                                 </Grid>
                             </Frame>
@@ -61,10 +68,10 @@
             Grid.ColumnSpan="2">
 
             <!-- Label for OFFLINE / ONLINE based on WIFI connection -->
-            <Label
+            <Label x:Name="modeLabel"
                 Margin="6"
                 Padding="6"
-                Background="red"
+                Background="lightGray"
                 Style="{StaticResource SmallLabel}"
                 Text="{Binding Mode, Mode=TwoWay}" >
                 <Label.GestureRecognizers>
