--- a/Part 2 - MVVM/MonkeyFinder/View/MainPage.xaml
+++ b/Part 2 - MVVM/MonkeyFinder/View/MainPage.xaml
@@ -30,7 +30,7 @@
                         HeightRequest="100"
                         Source="{Binding Image}"
                         WidthRequest="100" />
-                    <Label VerticalOptions="Center">
+                    <Label VerticalOptions="Center" TextColor="Gray">
                         <Label.Text>
                             <MultiBinding StringFormat="{}{0} | {1}">
                                 <Binding Path="Name" />
