--- a/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
@@ -3,5 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MonkeyFinder.View.MainPage">
 
+    <HorizontalStackLayout Spacing="20" Padding="20">
+        <Button Text="suck mah balls" FontSize="10"></Button>
+        <Button Text="suck mah balls" FontSize="10"></Button>
+    </HorizontalStackLayout>
     
 </ContentPage>
