--- a/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
@@ -4,7 +4,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:model="clr-namespace:MonkeyFinder.Model"
              xmlns:viewmodel="clr-namespace:MonkeyFinder.ViewModel"
-             x:DataType="viewmodel:MonkeysViewModel"
+             x:DataType="viewmodel:MonkeysViewModel" 
              Title="{Binding Title}"
              x:Class="MonkeyFinder.View.MainPage">
 
@@ -38,6 +38,8 @@
                                            Style="{StaticResource LargeLabel}"/>
                                     <Label Text="{Binding Location}"
                                            Style="{StaticResource MediumLabel}"/>
+                                    <Label Text="{Binding Population, StringFormat='Population: {0}'}"
+                                           Style="{StaticResource SmallLabel}"/>
                                 </VerticalStackLayout>
                             </Grid>
                         </Frame>
