--- a/Part 1 - Displaying Data/MonkeyFinder/View/DetailsPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/DetailsPage.xaml
@@ -52,6 +52,13 @@
                 
             </Grid>
             
+            <Button Text="Show on Map"
+                    Command="{Binding OpenMapCommand}"
+                    HorizontalOptions="Center"
+                    WidthRequest="200"
+                    Margin="8"
+                    Style="{StaticResource ButtonOutline}"></Button>
+            
             <VerticalStackLayout Padding="10" Spacing="10">
                 <Label Text="{Binding Monkey.Details}"
                        Style="{StaticResource MediumLabel}"/>
